--- a/requirements.txt
+++ b/requirements.txt
@@ -40,6 +40,7 @@ nvidia-nvshmem-cu12==3.3.20
 nvidia-nvtx-cu12==12.8.90
 packaging==25.0
 pdfminer.six==20250506
+pyahocorasick==2.3.0
 pdfplumber==0.11.7
 pillow==11.3.0
 psycopg2-binary==2.9.10
