--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,9 @@
     ]
   },
   "devDependencies": {
-    "concurrently": "^9.2.1"
+    "autoprefixer": "^10.4.20",
+    "concurrently": "^9.2.1",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.15"
   }
 }
