--- a/requirements.txt
+++ b/requirements.txt
@@ -60,6 +60,7 @@ scikit-learn==1.7.2
 scipy==1.16.3
 sentence-transformers==5.1.2
 setuptools==80.9.0
+slowapi==0.1.9
 sniffio==1.3.1
 SQLAlchemy==2.0.43
 starlette==0.48.0
