--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "./start.sh",
     "start-frontend": "cd frontend && npx react-scripts start",
-    "start-backend": "./venv/bin/python -m uvicorn backend.app.main:app --reload --host 0.0.0.0 --port 8000",
+    "start-backend": "uvicorn backend.app.main:app --reload --host 0.0.0.0 --port 8000",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
