--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ cffi==2.0.0
 charset-normalizer==3.4.3
 click==8.3.0
 cryptography==46.0.1
+Deprecated==1.3.1
 dotenv==0.9.9
 fastapi==0.116.2
 filelock==3.20.0
@@ -19,6 +20,7 @@ idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
 joblib==1.5.2
+limits==5.8.0
 MarkupSafe==3.0.3
 mpmath==1.3.0
 networkx==3.5
@@ -60,6 +62,7 @@ scikit-learn==1.7.2
 scipy==1.16.3
 sentence-transformers==5.1.2
 setuptools==80.9.0
+slowapi==0.1.9
 sniffio==1.3.1
 SQLAlchemy==2.0.43
 starlette==0.48.0
@@ -75,3 +78,4 @@ typing_extensions==4.15.0
 urllib3==2.5.0
 uvicorn==0.37.0
 Werkzeug==3.1.3
+wrapt==2.1.1
